--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "watch": "webpack-dev-server"
   },
   "dependencies": {
+    "bulma": "^0.6.2",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-router-dom": "^4.2.2"
